--- a/single3.html
+++ b/single3.html
@@ -190,7 +190,7 @@ Inmunodeficiencias: Algunas personas tienen sistemas inmunes adaptativos debilit
    <div style="display: flex; justify-content: center; margin-bottom: 50px;">
     <div style="text-align: center;">
         <h2>Aquí nuestro experimento</h2>
-<center> <iframe width="1100" height="300" src="https://youtu.be/ZdPhM1Ty2J4?feature=shared" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
+<center> <iframe width="1100" height="300" src="https://www.youtube.com/watch?v=ZdPhM1Ty2J4&ab_channel=JaimarBeitia" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
     </div>
 </div>
 </div>
@@ -267,7 +267,7 @@ La circulación corporal conecta la atmósfera, rica en oxígeno, con las célul
      <div style="display: flex; justify-content: center; margin-bottom: 50px;">
     <div style="text-align: center;">
         <h2>Aquí nuestro experimento</h2>
-        <center> <iframe width="1100" height="300" src="https://youtu.be/UYA2qe5UvT0?feature=shared" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
+        <center> <iframe width="1100" height="300" src="https://www.youtube.com/watch?v=UYA2qe5UvT0&ab_channel=JaimarBeitia" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
         </video>
     </div>
 </div>
@@ -374,7 +374,7 @@ La circulación corporal conecta la atmósfera, rica en oxígeno, con las célul
      <div style="display: flex; justify-content: center; margin-bottom: 50px;">
     <div style="text-align: center;">
         <h2>Aquí nuestro experimento</h2>
-        <center> <iframe width="1100" height="300" src="https://youtu.be/xEkgJ61HdKM?feature=shared" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
+        <center> <iframe width="1100" height="300" src="https://www.youtube.com/watch?v=xEkgJ61HdKM&ab_channel=JaimarBeitia" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
     </div>
 </div>
 
