--- a/single2.html
+++ b/single2.html
@@ -112,9 +112,7 @@
             <p>La fermentación es un proceso metabólico que permite a los organismos obtener energía en ausencia de oxígeno.</p>
             <p>Se utiliza ampliamente en la producción de alimentos y bebidas, como pan, cerveza y yogur.</p>
                         <h3 style="color: red;">EL EXPERIMENTO SE ENCUENTRA AQUÍ</h3></a>
-            <video width="1100" height="300" controls>
-  <source src="img/video_biologia.mp4" type="video/mp4">
-</video>
+       <center> <iframe width="1100" height="300" src="https://www.youtube.com/watch?v=zaOaL9iCyEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
             <p>Existen diferentes tipos de fermentación, como la fermentación alcohólica y la fermentación láctica, cada una con sus propias características y aplicaciones.</p>
                <h1>EXPLICACIONES</h1>
     <table>
