--- a/single2.html
+++ b/single2.html
@@ -112,7 +112,10 @@
             <p>La fermentación es un proceso metabólico que permite a los organismos obtener energía en ausencia de oxígeno.</p>
             <p>Se utiliza ampliamente en la producción de alimentos y bebidas, como pan, cerveza y yogur.</p>
                         <h3 style="color: red;">EL EXPERIMENTO SE ENCUENTRA AQUÍ</h3></a>
-       <center> <iframe width="1100" height="300" src="https://www.youtube.com/watch?v=zaOaL9iCyEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> </center>
+       <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/zaOaL9iCyEw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
+
             <p>Existen diferentes tipos de fermentación, como la fermentación alcohólica y la fermentación láctica, cada una con sus propias características y aplicaciones.</p>
                <h1>EXPLICACIONES</h1>
     <table>
@@ -137,9 +140,10 @@
             <img class="img-fluid rounded w-100 mb-4" src="img/ima3.jpg" alt="Image">
              <p>La presión atmosférica es la fuerza que ejerce el aire sobre la superficie terrestre y tiene un impacto significativo en nuestra vida diaria.</p>
                          <h3 style="color: red;">EL EXPERIMENTO SE ENCUENTRA AQUÍ</h3></a>
-            <video width="1100" height="300" controls>
-  <source src="img/video_quimica.mp4" type="video/mp4">
-</video>
+          <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/d5cPXb-vcDk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
+
             <p>Facilita la respiración al crear diferencias de presión, afecta la cocción de alimentos al influir en la temperatura de ebullición del agua y juega un papel crucial en el clima y la meteorología.</p>
             <h1>CURIOSIDADES</h1>
             <table>
@@ -166,9 +170,10 @@
             <img class="img-fluid rounded w-100 mb-4" src="img/ima6.jpg" alt="Image">
             <p>La energía cinética es la energía asociada al movimiento de los objetos y depende de su masa y velocidad.</p>
                         <h3 style="color: red;">EL EXPERIMENTO SE ENCUENTRA AQUÍ</h3></a>
-            <video width="1100" height="300" controls>
-  <source src="img/video_fisica.mp4" type="video/mp4">
-</video>
+          <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/TRj99mzRjUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
+
             <p>Se manifiesta en situaciones cotidianas, como al patear un balón o cuando una pelota rebota en el suelo.</p>
              <h1>MOVIMIENTOS</h1>
             <table>
