--- a/single1.html
+++ b/single1.html
@@ -186,10 +186,11 @@ Por último, un entendimiento profundo de la fotosíntesis ha facilitado avances
 <center>
 <p><h2>Demostración de la fotosíntesis</h2></p>
 
-<center><video class="img-fluid rounded w-50 float-left mr-4 mb-3" controls>
-  <source src="img\bio_vid.mp4" type="video/mp4">
-  </video>
+<center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/8aRdqYsQtUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </center>
+
+
 
 
         </div>
@@ -375,9 +376,10 @@ La fuerza de acción del cuerpo 1 sobre el cuerpo 2 es igual a la fuerza de reac
 <center>
 <h2>Demostración e las Leyes de Newton</h2>
 <video class="img-fluid rounded w-50 float-left mr-4 mb-3" controls>
-  <source src="img\vid_fd.mp4" type="video/mp4">
-  </video></center>
-    </div>
+ <center>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/0HAF9nC_LyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</center>
+
 
 </div>
 
