--- a/single1.html
+++ b/single1.html
@@ -182,22 +182,21 @@ Producción de alimentos: Proporciona la energía química necesaria para que la
 Hoy en día, la investigación en fotosíntesis artificial busca replicar este proceso natural para desarrollar tecnologías sostenibles, como los paneles solares. Además, el cambio climático está influyendo en la fotosíntesis: el aumento de CO₂ puede incrementar la producción en algunas plantas, pero los cambios en la temperatura y la disponibilidad de agua también pueden reducir la eficiencia del proceso en muchas especies.
 
 Por último, un entendimiento profundo de la fotosíntesis ha facilitado avances en la biotecnología agrícola, ayudando a crear cultivos más eficientes y resistentes, lo cual es esencial para enfrentar los retos de la seguridad alimentaria global. </p>
-<center>
+
 <center>
 <p><h2>Demostración de la fotosíntesis</h2></p>
 
-<center>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/8aRdqYsQtUA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<center><video class="img-fluid rounded w-100 float-center mr-2 mb-2" controls>
+  <source src="img\https://youtu.be/8aRdqYsQtUA" type="video/mp4">
+  </video>
 </center>
-
-
 
 
         </div>
 
         <!-- Sección Química -->
         <div id="quimica" style="display:none;">
-            <h1><b>Experimento de la oruga negra</b></h1>
+            <h1><b><CENTER>Experimento de la oruga negra</CENTER></b></h1>
          <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/iq1.jpg" alt="Image">       
     <p>
 El   experimento realizado da a entender el comportamiento del carbono activado, un material conocido por sus propiedades de absorción y purificación. El experimento consiste en añadir una mezcla de peróxido de hidrógeno y azúcar al carbono activado. Esto genera una reacción química exotérmica que produce calor y gas, lo que causa la expansión del material en forma de una estructura semi alargada parecida a la de una oruga, de ahí el nombre "oruga negra". <br>
@@ -205,8 +204,9 @@ Se observa el resultado de la descomposición del peróxido de hidrógeno, facil
   </br>Aunque este experimento se haga mayormente con materiales químicos bastante peligrosos también los materiales cotidianos pueden dar lugar a interesantes reacciones químicas cuando se combinan de manera adecuada.<br>
  Al realizar el experimento de la "oruga negra", un aspecto positivo es que es una forma divertida y visualmente impresionante de aprender sobre reacciones químicas, descomposición y combustión. Además, es una actividad segura si se siguen las precauciones adecuadas, utilizando materiales fácilmente accesibles como el azúcar, bicarbonato y alcohol, También fomenta la experimentación científica en un entorno controlado.</br>
 
-</p><h2><b>seguridad  al realizar  el experimento:</b></h2></br><p><li>Área ventilada: Realiza el experimento en un lugar bien ventilado para evitar la acumulación de gases.</li> 
-
+</p><h2><b><CENTER>Seguridad  al realizar  el experimento</CENTER></b></h2></br><center> <img class="img-fluid rounded w-50 float-center mr-4 mb-3" src="img/q4.jpg" alt="Image">   </center>    
+ 
+ <p><li>Área ventilada: Realiza el experimento en un lugar bien ventilado para evitar la acumulación de gases.</li>         
 	<li>Protección personal: Usa guantes y gafas de protección para evitar quemaduras o salpicaduras.</li> 
 
 
@@ -219,7 +219,7 @@ Se observa el resultado de la descomposición del peróxido de hidrógeno, facil
 	<li>Extintor: Ten a mano un extintor o agua en caso de incendio accidental.</li> 
 </p><br>
 <p>
-<h2><b>Causas de la reacción </b></h2>
+<h2><b><CENTER>Causas de la reacción</CENTER> </b></h2>
 <br><b>1.</b> Descomposición del peróxido de hidrógeno (H₂O₂): 
 El peróxido de hidrógeno se descompone naturalmente en agua (H₂O) y oxígeno (O₂). Sin embargo, esta descomposición es lenta sin la presencia de un catalizador. 
 El carbono activado, al ser un material poroso con gran superficie, actúa como catalizador y acelera esta descomposición. Esto produce una liberación rápida de oxígeno gaseoso y calor, lo que convierte la reacción en exotérmica (libera calor).<p>
@@ -235,11 +235,12 @@ La causa principal de la reacción es la combinación del efecto catalizador del
 
 </p><p></p>
 
-<p><b><h2><br>Importancia del dióxido de carbono </h2></p></b></br>
+<p><b><h2><br><CENTER>Importancia del dióxido de carbono </CENTER></h2></p></b></br>
 El dióxido de carbono (CO₂) desempeña un papel importante en el experimento por varias razones:<br> </br>
 
 <b>1.</b> Expansión de la estructura: Durante la reacción, la descomposición del azúcar y su combustión parcial generan gases como el dióxido de carbono (CO₂). Estos gases, junto con otros como el vapor de agua, quedan atrapados en la mezcla caliente y viscosa de azúcar caramelizado y carbono activado.
-A medida que el CO₂ se libera, contribuye a la expansión de la mezcla, haciendo que esta crezca de forma alargada, similar a una serpiente. La liberación de CO₂ y otros gases es lo que da lugar a la forma esponjosa y alargada que se observa en la "oruga".<br></br>
+A medida que el CO₂ se libera, contribuye a la expansión de la mezcla, haciendo que esta crezca de forma alargada, similar a una serpiente. La liberación de CO₂ y otros gases es lo que da lugar a la forma esponjosa y alargada que se observa en la "oruga".<br> <center>  <img class="img-fluid rounded w-40 mb-4" src="img/q1.jpg" alt="Image"></center>
+</br>
 <b>2.</b> Efecto de gasificante: 
 El CO₂ actúa como un "gasificante" en el proceso, creando burbujas en la mezcla que se está solidificando. Esto hace que la estructura final tenga una apariencia porosa, con muchas cavidades en su interior. 
 Este efecto es similar a cómo el CO₂ hace que la masa de un pastel suba cuando se utiliza bicarbonato de sodio en la cocina: el gas liberado durante una reacción química queda atrapado en la mezcla, dándole volumen.
@@ -249,27 +250,30 @@ Aunque el CO₂ por sí mismo no produce calor, su formación es una consecuenci
 <br></br>
 
 
-<video class="img-fluid rounded w-50 float-left mr-4 mb-3" controls>
-  <source src="img\quimica_11d_vid.mp4" type="video/mp4">
+<video class="img-fluid rounded w-50 float-left mr-4 mb-3" <source controls>
+  <source  src="img\https://youtu.be/UAsyCOZ73J0" type="video/mp4">
   </video>
 
 
 
- <b><h2>Composición del Experimento</b></h2>
+ <b><h2><CENTER>Composición del Experimento</CENTER></b></h2>
 <b>1. Reactivos:</b><br></br>
 
 <li><B>Alcohol (por ejemplo, etanol): </B> utilizado como disolvente o reactivo.<br></br>
 
 
 <b>Bicarbonato de sodio (NaHCO₃):</b> Un compuesto que puede actuar como un agente leudante y que reacciona con ácidos.
-<br></br>
+<br> <center>  <img class="img-fluid rounded w-40 mb-4" src="img/q3.jpg" alt="Image"></center>
+<br> <center>  <img class="img-fluid rounded w-10 mb-4" src="img/q2.jpg" alt="Image"></center>
+
+</br>
 <b>Azúcar (sacarosa):</b> Puede servir como un componente que, al ser calentado o mezclado, contribuye a la caramelización o a la formación de burbujas en la mezcla.
 
 <br>
 
 <br></br>
 
-<h2><b>Reacción Química</b></h2>
+<h2><b><CENTER>Reacción Química</CENTER></b></h2>
 
 Aunque no hay una reacción ácido-base directa como en el caso del vinagre, el uso de alcohol y bicarbonato puede llevar a varias reacciones interesantes. El proceso puede implicar los siguientes pasos:<br></br>
 
@@ -285,8 +289,6 @@ Si se calienta la mezcla, el bicarbonato de sodio puede descomponerse en carbona
 <br>
 
 
-
-<B>2(NaHCO3)~(Na2CO3)+H2O+CO2</B><BR></BR>
 <b>3. Caramelización del Azúcar:</b>
 
 Si la mezcla se calienta lo suficiente, el azúcar puede comenzar a caramelizarse, lo que produce un color marrón y una textura diferente. Esto puede agregar un efecto visual atractivo y un aroma dulce al experimento.
@@ -294,14 +296,14 @@ Si la mezcla se calienta lo suficiente, el azúcar puede comenzar a caramelizars
 
         <!-- Sección Física -->
         <div id="fisica" style="display:none;">
-            <h1>Aplicando las leyes de Newton</h1>
+            <h1><center>Aplicando las leyes de Newton</center></h1>
             <img class="img-fluid rounded w-48 float-right ml-4 mb-3" src="img/Imagen1f.jpg" alt="Image">
 
 
             <p>Las leyes de Newton son tres principios que explican cómo se mueven los cuerpos impulsados por fuerzas que actúan con una velocidad constante para moverlos. Se han usado para describir el movimiento de objetos creados por el hombre, como el de los medios de transporte o las maquinarias, y también fenómenos de gravitación universal, como el movimiento planetario. Desde que fueron planteadas, las Leyes de Newton han dado explicación a hechos propios de la mecánica clásica y la física.
-<b><h1>¿Quién fue Issac Newton?</b></h1><p>Isaac Newton fue un físico, matemático, filósofo y teólogo inglés, convertido en un referente en el campo de las ciencias gracias a sus importantes aportes, tales como el principio de la gravitación universal, el establecimiento de las bases de la mecánica clásica, sus estudios sobre la naturaleza de la luz y la óptica, y el desarrollo del cálculo infinitesimal, entre otros.
+<b><h1><center>¿Quién fue Issac Newton?</center></b></h1><p>Isaac Newton fue un físico, matemático, filósofo y teólogo inglés, convertido en un referente en el campo de las ciencias gracias a sus importantes aportes, tales como el principio de la gravitación universal, el establecimiento de las bases de la mecánica clásica, sus estudios sobre la naturaleza de la luz y la óptica, y el desarrollo del cálculo infinitesimal, entre otros.
 
-</p><p><h3><b>En las leyes de Newton se hablan de algunos términos que son:</b></h3></p><p>
+</p><p><h3><b><center>En las leyes de Newton se hablan de algunos términos que son</center></b></h3></p><p>
 <li>	Fuerza: se trata de una determinada acción que permite que un objeto se mueva o, incluso, que cambie su forma. Dicha acción puede ser levantar, halar, empujar o arrastrar un cuerpo.</li>
  <center>  <img class="img-fluid rounded w-50 mb-8" src="img/g_1.jpg" alt="Image"></center>
 
@@ -316,36 +318,36 @@ Si la mezcla se calienta lo suficiente, el azúcar puede comenzar a caramelizars
 <p>
 
 
-<h2><b>¿Cuáles son las leyes de Newton?</b></h2></p>
-<p><h4><b>1° Ley de Newton o principio de la inercia</b></h4></p>Esta ley establece que: 
+<h2><b><center>¿Cuáles son las leyes de Newton?</center></b></h2></p>
+<p><h4><b><center>1° Ley de Newton o principio de la inercia</center></b></h4></p>Esta ley establece que: 
 <p><b>“Todo cuerpo permanecerá en reposo o moviéndose a velocidad constante en linea recta, a menos que una fuerza externa le haga cambiar”</b></p><p>Eso quiere decir que, cualquier objeto que está quieto o en movimiento se va mantener igual, a menos que aparezca otro objeto o fuerza que lo mueva o lo haga cambiar de posición.
 
 Además, si se encuentra en movimiento siempre lo hará en línea recta, no en círculos, ni en zigzag.
-<p><h3><b>¿Qué es inercia?</h3></b>
+<p><h3><b><center>Qué es inercia?</center></h3></b>
 </p><p>Esa tendencia que tienen las cosas de mantenerse en movimiento como siguiendo una línea recta fue bautizada por Galileo como “Inercia”, de ahí el nombre de esta ley. 
 
-Dentro de esta ley se presentan algunos terminos que hacen mas clara esta ley y son:
+<center>Dentro de esta ley se presentan algunos terminos que hacen mas clara esta ley y son:</center>
 </p>
 
 <li>	La fricción: aparece cuando hay dos objetos que están en contacto, es decir, se alcanzan a tocar mientras se mueven en sentidos opuestos.</li> 
 	<li>La gravedad: es la fuerza que atrae los objetos hacia el centro de la Tierra.
 </li>
-<p><h3><b>¿Cómo aplicamos esta ley en la vida cotidiana?</h3></b></p>
-<p><h4>Algunos ejemplos son:</h4></p> <p><B>Andar en bicicleta</B>
+<p><h3><b><center>¿Cómo aplicamos esta ley en la vida cotidiana?<center></h3></b></p>
+<p><h4><center>Algunos ejemplos son</center></h4></p> <p><B>Andar en bicicleta</B>
 Cuando pedaleamos en una bicicleta y dejamos de hacerlo, esta sigue moviéndose un poco más, a menos que apretemos los frenos. Eso es así porque las ruedas siguen en movimiento por inercia.
 </p><p>
 <B>El cinturón de seguridad de los automóviles:</B>
 Cuando vamos en un coche, si este frena de golpe nuestros cuerpos tenderán a salir despedidos hacia adelante. ¿Por qué? Por la inercia. Nuestro cuerpo se está moviendo a cierta velocidad y tenderá a seguir así, aunque las ruedas del coche frenen. El cinturón de seguridad, entonces, funciona como la fuerza externa que detiene el movimiento hacia adelante y nos salva la vida.
 </p>
-<p><h2><b>2° ley de Newton o Ley fundamental de la dinámica</p></b></h2><p>
+<p><h2><b><center>2° ley de Newton o Ley fundamental de la dinámica</center></p></b></h2><p>
 Dice que:</p><p> 
 
 <b>“Cuando una fuerza actúa sobre un objeto este se pone en movimiento, acelera, desacelera o varía su trayectoria.”</b></p>
 <p>La segunda ley de Newton empieza donde terminó la primera ley.<p> La primera ley describe la inercia: un cuerpo no cambiará su movimiento hasta que una fuerza desbalanceada actúe en el cuerpo. En otras palabras, sin no se aplica una fuerza desbalanceada, el cuerpo permanecerá sin moverse, o, si se encuentra en movimiento, continuará con la misma dirección y rapidez. </p><p>¿Qué sucede cuando una fuerza desbalanceada actúa en un objeto? La segunda ley de Newton establece que este tipo de fuerza cambiará la velocidad de un objeto porque la rapidez y/o la dirección cambiará. A estos cambios en la velocidad se le llama aceleración.</p><p> La segunda ley de Newton define la relación exacta entre fuerza y aceleración matemáticamente. <p><li>La aceleración de un objeto es directamente proporcional a la suma de todas las fuerzas que actúan sobre él e inversamente proporcional a la masa del objeto, Masa es la cantidad de materia que el objeto tiene. Entre más masa tenga el objeto, más difícil es hacer que el objeto cambie su dirección o rapidez, ya sea que este en reposo o en movimiento de forma recta y a un paso constante.</li><li> La dirección de la aceleración se dirigirá en la misma dirección que la fuerza neta aplicada al objeto. En términos matemáticos Newton se define como: F=ma, “F”(la fuerza) y “a” (aceleración), tanto la fuerza como la aceleración son magnitudes vectoriales, es decir, tienen un valor, una dirección y un sentido (por eso las letras están remarcadas), y “m” es la masa del objeto. “F” en esta ecuación es la fuerza neta, es decir, la suma de vectorial de todas las fuerzas actuando en el objeto.</li></p>
-<h2>Los términos que abarcan esta ley son:</h2>
+<h2><center>Los términos que abarcan esta ley son</center></h2>
 <li><b>Aceleración:</b> es una magnitud que indica cómo cambia la velocidad del objeto en una unidad de tiempo.</li>
 <b><li>Fuerza:</b> cualquier acción que se ejerza para mover un objeto o modificar su forma. </li>
-<P><h3>Ejemplos de la vida cotidiana en donde vemos esta ley:</h3></P>
+<P><h3><center>Ejemplos de la vida cotidiana en donde vemos esta ley</center></h3></P>
 <p><li><b>Carro de supermercado</b>
 Es más fácil empujar un carro de supermercado vacío que uno lleno, dado que el carro lleno tiene más masa que el vacío, por lo que es necesaria más fuerza para empujar el carro lleno.</li>
 
@@ -357,7 +359,7 @@ Cuando abrimos una puerta tendremos que realizar distinta fuerza según el mater
 Para extraer el kétchup de su bote debemos presionarlo para que salga por la rendija. Dependiendo de la fuerza que se aplique, el kétchup puede salir lentamente y caer sobre la hamburguesa o salir a gran velocidad y desperdigarse por todo el plato.</li>
 
 </p>
-<p><h3><b>3° ley de Newton o Ley  de acción o reacción</h3></b>
+<p><h3><b><center>3° ley de Newton o Ley  de acción o reacción</center></h3></b>
 <p>
 
 <p>Esta ley plantea que:</p>
@@ -367,19 +369,18 @@ Para extraer el kétchup de su bote debemos presionarlo para que salga por la re
 La tercera ley de Newton explica que si alguien toca algo, ese algo ejerce la misma fuerza sobre la persona. Esto es, cuando un objeto o cuerpo 1 aplica una fuerza sobre un cuerpo 2, el cuerpo 2 aplica la misma fuerza sobre el cuerpo 1, pero en sentido contrario.</p><p>
 
 Una idea común de fuerza son los actos de empujar, halar o deformar que se puede producir por la interacción de dos cuerpos u objetos.
-<b><h2>Enunciado matemático de la tercera ley de Newton</b></h2><p> 
+<b><h2><center>Enunciado matemático de la tercera ley de Newton</center></b></h2><p> 
 Es decir:
 La fuerza de acción del cuerpo 1 sobre el cuerpo 2 es igual a la fuerza de reacción del cuerpo 2 sobre el cuerpo 1 en sentido contrario.
 </p><p><li>Accion y reaccion: La acción es la fuerza ejercida sobre un objeto y la reacción es la fuerza experimentada por el objeto que ejerció la fuerza.</li>
 
-<li>Interaccion: Acción que se ejerce recíprocamente entre dos o más objetos, personas, agentes, fuerzas, funciones, etcétera.</li><p><h3><b>Ejemplo de la vida cotidiana</b></h3></p>Cuando estamos en un columpio y alguien nos empuja, esa persona experimenta una fuerza que lo empuja hacia atrás; si no está bien apoyado puede caer por el impulso.
+<li>Interaccion: Acción que se ejerce recíprocamente entre dos o más objetos, personas, agentes, fuerzas, funciones, etcétera.</li><p><h3><b><center>Ejemplo de la vida cotidiana</center></b></h3></p>Cuando estamos en un columpio y alguien nos empuja, esa persona experimenta una fuerza que lo empuja hacia atrás; si no está bien apoyado puede caer por el impulso.
 <center>
-<h2>Demostración e las Leyes de Newton</h2>
-<video class="img-fluid rounded w-50 float-left mr-4 mb-3" controls>
- <center>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/0HAF9nC_LyU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-</center>
-
+<h2>Demostración e las Leyes de Newton</h2></center>
+<video class="img-fluid rounded w-50 float-center mr-4 mb-3" controls>
+  <source src="img/https://youtu.be/0HAF9nC_LyU" type="video/mp4">
+  </video>
+    </div>
 
 </div>
 
@@ -388,7 +389,7 @@ La fuerza de acción del cuerpo 1 sobre el cuerpo 2 es igual a la fuerza de reac
 
 
 
-
+</h5>
 </p>
 
         </div>
@@ -404,6 +405,7 @@ La fuerza de acción del cuerpo 1 sobre el cuerpo 2 es igual a la fuerza de reac
             document.getElementById(section).style.display = 'block';
         }
     </script>
+
 </body>
 
 </html>
